sophons/system/cilium/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: forwardauth-authelia
  namespace: kube-system
spec:
  chain:
    middlewares:
      - name: forwardauth-authelia
        namespace: authelia
