sophons/system/cilium/service.yaml
# yaml-language-server: $schema=https://kubernetesjsonschema.dev/v1.18.1/service.json
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: hubble-ui
    app.kubernetes.io/name: hubble-ui
    app.kubernetes.io/part-of: cilium
  annotations:
    metallb.io/address-pool: internal
    external-dns.alpha.kubernetes.io/hostname: hubble.sophons.cloud
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
  name: hubble-ui-internal
  namespace: kube-system
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8081
  selector:
    k8s-app: hubble-ui
