sophons/system/cilium/ciliumclusterwidenetworkpolicy.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/nlamirault/schema-hub/main/schemas/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: iperftreefiddy
spec:
  description: "Allow iperf3"
  nodeSelector:
    matchLabels:
      sophons.cloud/iperftreefiddy: "true"
  ingress:
    - toPorts:
        - ports:
            - port: "5201"
              protocol: TCP
            - port: "5201"
              protocol: UDP
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/nlamirault/schema-hub/main/schemas/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: fayawall
spec:
  description: "Default node firewall"
  nodeSelector:
    matchLabels:
      sophons.cloud/fayawall: "true"
  ingress:
    - fromEntities:
        - cluster
        - health
        - kube-apiserver

    - fromCIDR:
        - 10.1.0.0/16
        - 10.42.0.0/16
        - 10.69.0.0/16
        - 10.67.0.0/16
        - fdf6:9420:fade::/48
        - 100.64.0.0/10
        - fd7a:115c:a1e0::/48

    - fromCIDRSet:
        - cidrGroupRef: cloudflare
      toPorts:
        - ports:
            # http
            - port: "80"
              protocol: TCP
            # https
            - port: "443"
              protocol: TCP
            - port: "443"
              protocol: UDP

    - toPorts:
        - ports:
            # ssh
            - port: "22"
              protocol: TCP
            # Break in case of Cloudflare downtime
            # http
            # - ports: "80"
            #   protocol: TCP
            # https
            # - ports: "443"
            #   protocol: TCP
            # - ports: "443"
            #   protocol: UDP
            # etcd-client
            - port: "2379"
              protocol: TCP
            # etcd-peer
            - port: "2380"
              protocol: TCP
            # health checks?
            - port: "4240"
              protocol: TCP
            # geneve
            - port: "6081"
              protocol: UDP
            # apiserver
            - port: "6443"
              protocol: TCP
            # vxlan
            - port: "8472"
              protocol: UDP
            # talos
            - port: "50000"
              protocol: TCP
            # wireguards
            - port: "51867"
              protocol: UDP
            - port: "51868"
              protocol: UDP
            - port: "51869"
              protocol: UDP
            - port: "51870"
              protocol: UDP

    - icmps:
        - fields:
            - type: EchoRequest
              family: IPv4
            - type: EchoRequest
              family: IPv6
            - type: EchoReply
              family: IPv4
            - type: EchoReply
              family: IPv6
